# materials

./: .gitignore  README.md  readme.md
.github/workflows/: hw-01.yaml  hw-02.yaml  hw-03.yaml  hw-04.yaml  hw-05.yaml  hw-06.yaml  hw-07.yaml  hw-08.yaml  hw-09.yaml  hw-10.yaml
2020/dslib/: __init__.py  message.py  process.py  runtime.py  test_server.py
2020/dslib/proto/: test_server.proto  test_server_pb2_grpc.py
2020/homework/broadcast/: readme.md
2020/homework/kv-sharding/: test.py
2020/homework/rest-http/: .gitlab-ci.yml  readme.md
2020/seminars/05-mq/: readme.md  slides.md
2020/seminars/06-failure_detection/: for_teacher.md
2020/seminars/10-replication/: readme.md
2021/seminars/01-dslib/: readme.md
2021/seminars/05-message-queues/: readme.md
2021/seminars/06-failure_detection/: readme.md
2021/seminars/10-replication/: readme.md
2022/seminars/02-protocols/: readme.md
2022/seminars/04-multicast/: readme.md
dslib/: comm.py  readme.md  runtime.py  test_server.py  transport.py
dslib/examples/ping-pong/: readme.md  test.py
dslib/proto/: test_server.proto  test_server_pb2.py  test_server_pb2_grpc.py
homework/: readme.md
homework/01-guarantees/: readme.md  solution.py
homework/01-guarantees/tests/: Cargo.toml
homework/02-practice-grpc/: README.md  docker-compose.yml
homework/03-http/: README.md  description.md  launch.sh
homework/03-http/server/: Dockerfile  (+3 more)
homework/04-broadcast/: readme.md  solution.py
homework/05-practice-messaging/: README.md  docker-compose.yml
homework/06-membership/: readme.md  solution.py
homework/06-membership/tests/: Cargo.toml
homework/06-membership/tests/src/: common.rs  main.rs  tests.rs  tests_mc.rs
homework/07-kv-sharding/: readme.md  solution.py
homework/08-kv-replication/: readme.md  solution.py
homework/09-kv-replication-v2/: readme.md  solution.py
homework/09-kv-replication-v2/tests/: Cargo.toml
homework/09-kv-replication-v2/tests/src/: common.rs  main.rs  tests.rs  tests_mc.rs
homework/10-practice-security/: README.md  docker-compose.yml  examples.md
homework/broadcast/: test.py
homework/guarantees/: readme.md  requirements.txt  test.py
homework/kv-replication/: readme.md  test.py
homework/kv-sharding/: readme.md  test.py
homework/membership/: readme.md  test.py
homework/rpc/: readme.md  test.py
seminars/01-dslib/: .gitignore  readme.md
seminars/01-dslib/ping-pong/test/: Cargo.toml
seminars/01-dslib/ping-pong/test/src/: main.rs
seminars/01-framework/: readme.md
seminars/01-framework/ping-pong/tests/: Cargo.toml
seminars/01-framework/ping-pong/tests/src/: main.rs
seminars/02-sockets/: readme.md
seminars/03-http/: readme.md
seminars/04-broadcast/gossip/simulator/: Cargo.toml
seminars/04-broadcast/gossip/simulator/src/: main.rs
seminars/04-multicast/: readme.md
seminars/05/: readme.md
seminars/05-message-queues/: readme.md
seminars/06-failure_detection/: for_teacher.md  readme.md
seminars/07-peer-to-peer/: readme.md
seminars/08-balancing-sharding/: plan.md  readme.md
seminars/08-balancing-sharding/load-balancing-lab/: Cargo.toml  Dockerfile  Lab.ipynb  README.md  run_in_docker.sh
seminars/08-balancing-sharding/load-balancing-lab/src/: balancer.rs  config.rs  events.rs  host.rs  log.rs  main.rs
seminars/08-scalability/: readme.md
seminars/09-map-reduce/: readme.md
seminars/09-replication/: plan.md  readme.md
seminars/10-clock-consistency-crdt/: README.md
seminars/10-replication/: readme.md
seminars/11-consensus/: README.md
seminars/11-versioning/: readme.md
seminars/12-locks/: README.md
week-01/: readme.md
week-01/anysystem-intro/: readme.md
week-02/: readme.md
week-02/grpc-practice/: docker-compose.yaml
week-02/grpc-streaming/: docker-compose.yaml
week-03/: readme.md
week-03/seminar/: README.md  readme.md
week-04/: readme.md
week-04/seminar/: readme.md
week-05/: readme.md
week-06/: readme.md
week-06/seminar/: readme.md
week-07/: README.md
(+275 files in other folders)
