[package]
name = "kv-replication-v2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-mp = { git = "https://github.com/osukhoroslov/dslab.git" }
dslab-mp-python = { git = "https://github.com/osukhoroslov/dslab.git" }
assertables = "3.2.2"
byteorder = "1.4.3"
clap = { version = "3.2.17", features = ["cargo", "derive"] }
decorum = "0.3.1"
env_logger = "0.9.0"
log = "0.4.17"
md5 = "0.7.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
