[package]
name = "load-balancing-lab"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { git = "https://github.com/osukhoroslov/dslab.git" }
clap = { version = "3.1.17", features = ["cargo", "derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.107"
