[package]
name = "ping-pong"
version = "0.1.1"
edition = "2021"

[dependencies]
dslib = "0.1.1"
assertables = "3.2.2"
clap = { version = "3.2.17", features = ["cargo", "derive"] }
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0"
sugars = "3.0.1"
