[package]
name = "gossip"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-mp = { git = "https://github.com/osukhoroslov/dslab.git" }
dslab-mp-python = { git = "https://github.com/osukhoroslov/dslab.git" }
clap = { version = "3.1.17", features = ["cargo", "derive"] }
serde = { version = "1.0.142", features = ["derive"] }
sugars = "3.0.0"
