[package]
name = "gossip"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-mp = { git = "https://github.com/osukhoroslov/dslab.git", rev = "07d286cf1611fd8b3dece5a03ce561cd1fd6076a" }
dslab-mp-python = { git = "https://github.com/osukhoroslov/dslab.git", rev = "07d286cf1611fd8b3dece5a03ce561cd1fd6076a" }
clap = { version = "3.1.17", features = ["cargo", "derive"] }
serde = { version = "1.0.142", features = ["derive"] }
sugars = "3.0.0"
